all functions completed

--- a/python_scripts/envvars.env
+++ b/python_scripts/envvars.env
@@ -3,3 +3,6 @@ RECIPIENT_EMAIL="sushank.saini@abc.com"
 PASSPHRASE="passphrase"
 ENCRYPTED_FILE_PATH="E:\BMO-SE-Work\python_scripts\encrypted_file.gpg"
 DECRYPTED_FILE_PATH="E:\BMO-SE-Work\python_scripts\decrypted_file.txt"
+FTP_HOSTNAME="ftp.dlptest.com"
+FTP_USERNAME="dlpuser"
+FTP_PASSWORD="rNrKYTX9g7z3RgJRmxWuGHbeu"
