--- a/python_scripts/envvars.env
+++ b/python_scripts/envvars.env
@@ -6,3 +6,7 @@ DECRYPTED_FILE_PATH="E:\BMO-SE-Work\python_scripts\decrypted_file.txt"
 FTP_HOSTNAME="ftp.dlptest.com"
 FTP_USERNAME="dlpuser"
 FTP_PASSWORD="rNrKYTX9g7z3RgJRmxWuGHbeu"
+DB_HOSTNAME="localhost"
+DB_USERNAME="root"
+DB_PASSWORD="password"
+DB_DATABASE="decrypted_files"
